# data_generator

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docker/postgres/: docker-compose.yml
generator/cli/: app.py
generator/db/: session.py
generator/postgres/adventure_works/: crud.py
makefile_resources/: bootstrap.mk
postgres/adventure_works/: .env.example  Dockerfile  Makefile  README.md  requirements.txt
postgres/adventure_works/sql/: install.sql
postgres/adventure_works/src/: Readme.md  crud.py  generate_data.py  logger.py
